# bird_vision

./: .gitignore  INSTALLATION.md  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements-audio.txt  requirements-dev.txt  requirements-esp32.txt  requirements-raspberry-pi.txt  requirements-tflite.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/compression/: default.yaml
configs/deployment/: esp32.yaml  mobile.yaml  raspberry_pi.yaml
configs/model/: efficientnet_v2.yaml
configs/training/: default.yaml
docker/: Dockerfile
esp32/: README.md
scripts/: analyze_coverage.py  deploy_esp32.py  download_data.py  run_tests.py  setup_env.bat  setup_env.sh  train_model.py
src/bird_vision/: __init__.py  cli.py
src/bird_vision/compression/: __init__.py  model_compressor.py
src/bird_vision/deployment/: __init__.py  esp32_deployer.py  mobile_deployer.py  raspberry_pi_deployer.py
src/bird_vision/training/: __init__.py  trainer.py
src/bird_vision/utils/: checkpoint.py  metrics.py  model_utils.py
src/bird_vision/validation/: __init__.py  model_validator.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: mock_data.py
tests/integration/: test_platform_integration.py
tests/unit/: test_compression.py  test_data.py  test_deployment.py  test_models.py  test_raspberry_pi_deployment.py  test_training.py
